# GJP

./: .gitignore  LICENSE  README.md  conftest.py  setup.cfg
.github/workflows/: tests.yml
.trunk/: trunk.yaml
.trunk/configs/: .bandit
gjp/: __init__.py  bag_decoder.py  bag_gae.py  cheat_decoder.py  cheat_gae.py  decoder.py  edge_weight_decoder.py  edge_weight_gae.py  gae.py  graphset.py  metric_util.py  model.py  mpg.py  mpg_edge_weight.py
tests/: test_bag_decoder.py  test_bag_gae.py  test_cheat_decoder.py  test_cheat_gae.py  test_data.py  test_decoder.py  test_edge_weight_decoder.py  test_edge_weight_gae.py  test_gae.py  test_metric.py  test_model.py  test_mpg.py  test_mpg_edge_weight.py  utils.py
