[metadata]
name = gjp
version = 0.0.0
description = Playing with Jraph Jax Graphs
long_description = file: README.md
long_description_content_type = text/markdown
author = Ludwig Schneider
url = https://github.com/InnocentBug/GJP
license = BSD
license_files = LICENSE.md
platforms = any

[options]
package_dir =
    =gjp
packages = find:
python_requires = >=3.10
include_package_data = True
install_requires =
		 jraph
		 flax
		 networkx

[options.packages.find]
where = gjp